--- a/StreamusicClientAndroid/StreamusicClientAndroid/StreamusicClientAndroid.csproj
+++ b/StreamusicClientAndroid/StreamusicClientAndroid/StreamusicClientAndroid.csproj
@@ -130,6 +130,9 @@
       <Version>28.0.0.3</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
+    <PackageReference Include="XamarinFileChooser">
+      <Version>1.2.0</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LogicaDeNegocio\Logica.csproj">
@@ -263,6 +266,11 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\activity_registrodealbum.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\activity_registrodecancion.xml">
       <SubType>Designer</SubType>
     </AndroidResource>
   </ItemGroup>
